<resources>
    <string name="app_name">Random Chat</string>
    <string name="empty_list_text">You do not have any chat yet. \nPress “+” to find a new chat</string>
    <string name="question_gender">Who would you like to chat with?</string>
    <string name="question_language">What language should it be?</string>
    <string name="answer_man">a man</string>
    <string name="answer_woman">a woman</string>
    <string name="answer_anybody">anybody</string>
    <string name="button_next">next</string>
    <string name="language_english">English</string>
    <string name="language_french">French</string>
    <string name="language_spanish">Spanish</string>
    <string name="language_russian">Russian</string>
    <string name="language_german">German</string>
    <string name="language_ukrainian">Ukrainian</string>
    <string name="language_other">Other</string>
    <string name="button_go">go</string>
    <string name="input_hint_name">Input your pretty name..</string>
    <string name="question_input_gender">What is your gender?</string>
    <string name="gender_man">MAN</string>
    <string name="gender_woman">WOMAN</string>
    <string name="button_save">SAVE</string>
    <string name="menu_report_user">Report user</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_change_name">Change name</string>
    <string name="message_input_hint">Write a message...</string>
    <string name="settings_notification">Notification</string>
    <string name="settings_new_chats">New chats</string>
    <string name="settings_safety">Safety</string>
    <string name="settings_blur_all_images">Blur all images</string>
    <string name="settings_check_text_on_adult_content">Check text on adult content</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_dark_mode">Dark mode</string>
    <string name="settings_interactive">Interactive</string>
    <string name="settings_bot_messages">Start a chat with Bot messages</string>
    <string name="settings_adult_content_hint">Only for English, Russian and Ukrainian languages.</string>
    <string name="attach_topic">Get a topic</string>
    <string name="attach_question">Get neutral question</string>
    <string name="attach_question_for_couple">Get question for a couple</string>
    <string name="option_remove_chat">Remove</string>
    <string name="header_searching">Searching for a new chat</string>
    <string name="searching_main">We are trying to find \n someone special for you.</string>
    <string name="searching_hint_1">We recommend you to close the app because we do not know how long it will take.</string>
    <string name="searching_hint_2">We will inform you as soon as we find a new chat.</string>
    <string name="dialog_warning">Warning!</string>
    <string name="dialog_info_1">User message may contain adult content.</string>
    <string name="dialog_info_2">Do you want to continue?</string>
    <string name="dialog_yes">yes</string>
    <string name="dialog_no">no</string>
    <string name="notification_title">Random chat</string>
    <string name="notification_body">We have found a new chat for you!</string>
    <string name="header_empty_chatlist">Find a new chat</string>
    <string name="hint_toast_hide_chatlist_box">Press on name at the header to show/hide chat-list box</string>
    <string name="empty_chat_label">No messages here yet..</string>
    <string name="close_chat">Close chat</string>
</resources>
