<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/accent"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:text="@string/settings_notification"
        style="@style/SettingsInnerPadding"/>

    <Switch
        android:id="@+id/switch_notification"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="17sp"
        android:text="@string/settings_new_chats"
        style="@style/SettingsInnerPadding" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_divider_height"
        android:background="@drawable/settings_divider"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/accent"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:text="@string/settings_safety"
        style="@style/SettingsInnerPadding"/>

    <Switch
        android:id="@+id/switch_blur"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="17sp"
        android:checked="true"
        android:text="@string/settings_blur_all_images"
        android:background="@drawable/thin_settings_divider"
        style="@style/SettingsInnerPadding" />

    <Switch
        android:id="@+id/switch_adult_content"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="17sp"
        android:checked="true"
        android:text="@string/settings_check_text_on_adult_content"
        style="@style/SettingsInnerPadding" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_divider_height"
        android:background="@drawable/settings_divider"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/accent"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:textSize="16sp"
        android:text="@string/settings_theme"
        style="@style/SettingsInnerPadding"/>

    <Switch
        android:id="@+id/switch_dark_mode"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="17sp"
        android:text="@string/settings_dark_mode"
        style="@style/SettingsInnerPadding" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/settings_divider"/>
</LinearLayout>