<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_box"
    android:gravity="center"
    android:paddingTop="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:text="@string/dialog_warning"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        android:text="@string/dialog_info_1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textSize="16sp"
        android:text="@string/dialog_info_2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/adult_content_warning_yes"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:layout_weight="1"
            android:textSize="17sp"
            android:text="@string/dialog_yes"
            android:textAllCaps="true"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/adult_content_warning_no"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:layout_weight="1"
            android:textColor="@color/red"
            android:textSize="17sp"
            android:text="@string/dialog_no"
            android:textAllCaps="true"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

</LinearLayout>