<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/question_input_gender"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <chr.chat.views.ChatButton
                android:id="@+id/button_man"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginEnd="30dp"
                android:text="@string/gender_man"/>

            <chr.chat.views.ChatButton
                android:id="@+id/button_woman"
                android:layout_width="@dimen/button_width"
                android:layout_height="40dp"
                android:text="@string/gender_woman" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/white"
        android:gravity="center">

        <Button
            android:id="@+id/button_save"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/button_save"
            android:visibility="invisible"
            style="@style/HighlightedButton"/>
    </LinearLayout>

</LinearLayout>